Wrap VoteCounter in IssueStatus component

--- a/client/src/css/VoteCounter.css
+++ b/client/src/css/VoteCounter.css
@@ -1,10 +1,6 @@
 .VoteCounter {
-  margin: 4rem 0 0 2rem;
-  padding: 1rem 2rem;
-  /*border: 1px solid gray;*/
-  background-color: #f5f5f5;
-  color: #7b7979;
   font-weight: bold;
+  color: #7b7979;
 }
 
 .VoteCounter-bar {
